# lfmsh_bank

./: .env.template  .gitattributes  .gitignore  .repoignore  README.md  docker-compose.dev.yml  docker-compose.yml  entry.sh  entrypoint.sh  main.py  openapi.json  pyproject.toml  requirements.txt  tz.md
backend/: alembic.ini  generate_openapi.py  main.py  openapi.json  openapi.yaml  openapi_manual.yaml  pyproject.toml  test_transaction.py
backend/app/: main.py  postman-collection.json
backend/app/api/v1/: __init__.py  deps.py
backend/app/api/v1/endpoints/: __init__.py  auth.py  badges.py  statistics.py  tax.py  transactions.py  users.py
backend/app/core/: config.py  constants.py  logging.py  media.py  security.py
backend/app/db/: init_db.py
backend/app/models/: __init__.py  atomic_transaction.py  attendance.py  badge.py  base.py  money.py  transaction.py  user.py
backend/app/schemas/: badge.py  token.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 9debf2577c4d_add_description_column_and_remove_.py  ffcfe72df5f5_add_description_column_and_remove_.py
backend/static/: test_users.csv
django-app/: manage.py
django-app/api/: api.yaml  postman-collection.json  urls.py  views.py
django-app/bank/: forms.py  helper_functions.py  tables.py  urls.py  views.py
django-app/bank/constants/: constants.py  money_type_enum.py  transaction_type_enum.py
django-app/bank/controls/: TransactionService.py  stats_controller.py
django-app/bank/controls/transaction_controllers/: ActivityTransactionController.py  CertificateTransactionController.py  DSTransactionController.py  ExamTransactionController.py  FacAttendTransactionController.py  FacPassTransactionController.py  FineTransactionController.py  GeneralTransactionController.py  LabTransactionController.py  LectureTransactionController.py  P2PTransactionController.py  PurcaseTransactionController.py  SeminarTransactionController.py  TableTransactionController.py  TransactionController.py  WorkoutTransactionController.py
django-app/bank/management/commands/: add_static_data.py  add_users.py  charge_tax.py  merge_users.py
django-app/bank/migrations/: 0001_initial.py
django-app/bank/models/: Account.py  Attendance.py  Money.py  Transaction.py
django-app/bank/static/bank/css/: bank.css  (+1 more)
django-app/bank/templates/bank/: base.html  counters.html  indexx.html  monitor_table.html  newui.html  report.html  staff_page.html  study_stats.html  user_page.html
django-app/bank/templates/registration/: login.html
django-app/bank/test/models/: test_account.py  test_attendance.py  test_money.py
django-app/bank_api/: postman-collection.json  urls.py  views.py
django-app/main/: settings.py  urls.py
django-app/meta_files/static_data/: attendance_blocks.json  attendance_types_json.json  money_types.json  transaction_types.json  user_groups.json
django-app/meta_files/users_data/: staff_example_short.csv  student_example.csv  student_example_short.csv
django-app/scripts/: Passwords_refresh.py  grade_party_fix.py
docker/backend/: Dockerfile
docker/django-app/: Dockerfile
docker/frontend/: Dockerfile  Dockerfile.dev
docker/nginx/: nginx.conf
frontend/: api.yaml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: rules.md
frontend/src/: App.tsx  globals.css
frontend/src/components/: AttendanceCard.tsx  Background.tsx  Navbar.tsx  PioneerInfoCard.tsx  StaffInfoCard.tsx  StatisticsCard.tsx  TransactionItem.tsx  TransactionUserItem.tsx  TransactionViewDialog.tsx  TransactionsCard.tsx  UserInfoCard.tsx  UserName.tsx  loading.tsx
frontend/src/components/old_ui/: tooltip.tsx
frontend/src/components/ui/: button.tsx  card.tsx  data-table.tsx  tooltip.tsx
frontend/src/lib/: markdown-components.tsx  markdown-loader.ts  utils.ts
frontend/src/pages/: CreateTransactionPage.tsx  LoginPage.tsx  PioneerPage.tsx  PioneersPage.tsx  RulesPage.tsx  SeminarPage.tsx  StaffPage.tsx  UserPage.tsx  UserProfilePage.tsx
frontend/src/services/: api.ts
(+28 files in other folders)
