[project]
name = "lfmsh-bank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appdirs>=1.4.4",
    "astroid>=3.3.8",
    "django>=5.1.6",
    "django-bootstrap5>=24.3",
    "django-tables2>=2.7.5",
    "isort>=6.0.0",
    "lazy-object-proxy>=1.10.0",
    "lorem-ipsum-generator>=0.3",
    "mccabe>=0.7.0",
    "packaging>=24.2",
    "psycopg2-binary>=2.9.10",
    "pylint>=3.3.4",
    "pyparsing>=3.2.1",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "rope>=1.13.0",
    "six>=1.17.0",
    "sqlparse>=0.5.3",
    "toml>=0.10.2",
    "transliterate>=1.10.2",
    "unify>=0.5",
    "untokenize>=0.1.1",
    "uwsgi>=2.0.28",
    "werkzeug>=3.1.3",
    "wrapt>=1.17.2",
    "yapf>=0.43.0",
]

[dependency-groups]
dev = [
    "django-extensions>=3.2.3",
    "pydotplus>=2.0.2",
]
