[project]
name = "lfmsh-bank-fastapi"
version = "0.1.0"
description = "FastAPI backend for LFMSH Bank"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic[email]>=2.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "passlib[bcrypt]>=1.7.4",
    "loguru>=0.7.0",
    "alembic>=1.12.0",
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88 
