[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lfmsh_bank_backend"
version = "0.1.0"
description = "FastAPI backend for LFMSH Bank System"
authors = [
  { name = "LFMSH Team", email = "example@example.com" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "psycopg2-binary>=2.9.5",
    "python-jose>=3.3.0",
    "passlib>=1.7.4",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6",
    "bcrypt>=4.0.1",
    "alembic>=1.11.1",
    "pyyaml>=6.0.2",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "httpx>=0.24.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[dependency-groups]
dev = [
    "ruff>=0.12.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
#  E712 Avoid equality comparisons to `True`; use `if TransactionRecipient.counted:` for truth checks
#  F401 'app.models' imported but unused
ignore = ["E712", "F401"]

